<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!-- marginStart ის ნაცვლად ყველგან რომ 16 dp ია შეგიძლია guideline გამოიყენო !-->


    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="243dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/karla"
        android:text="@string/sign_into_your_account"
        android:textColor="@color/text_color"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- topBottomOf tvSignIn ის ქვემოთ შეგიძლია ჩასვა, უფრო სტრუქტურულად სწორია ყველა ვიუ მშობლის ქვემოთ გაქვს გაცენტრილი ერთმანეთის ქვემოთ შეგიძლია გქონდეს !-->
    <TextView
        android:id="@+id/tvLogIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/karla"
        android:text="@string/log_into_your_bankme_account"
        android:textColor="@color/primary_dark"
        android:textSize="15sp"
        app:layout_constraintDimensionRatio="12.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="272dp"
        android:fontFamily="@font/karla"
        android:text="@string/phone_number"
        android:textColor="@color/primary_dark"
        app:layout_constraintDimensionRatio="5.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ფიქსირებული width ის ნაცვლად შეგიძლია მიცე width 0dp და გქონდეს endGuideline ედიტ ტექსტის ბოლოოს კი მასთან დააკონსტრეინტებ endendof - endGuideline ღილაკებზეც და სხვა ედიტ ტექსტებზეც ვრცეელდება ეს!-->

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="382dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="297dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/hint_text"
        android:inputType="number"
        android:paddingLeft="10dp"
        app:layout_constraintDimensionRatio="7.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="67dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/karla"
        android:text="@string/password"
        android:textColor="@color/primary_dark"
        app:layout_constraintDimensionRatio="3.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAccountPassword"
        android:layout_width="382dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="385dp"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintDimensionRatio="7.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvRecoverPassword"
        android:layout_width="258dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="450dp"
        android:clickable="true"
        android:fontFamily="@font/karla"
        android:lineHeight="22.59dp"
        android:text="@string/textview_forget_password"
        android:textColorLink="@color/text_color"
        android:textSize="15sp"

        app:layout_constraintDimensionRatio="5.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="382dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="528dp"
        android:backgroundTint="@color/text_color"
        android:text="@string/log_in_button"
        android:textColor="@color/white"
        app:layout_constraintDimensionRatio="7.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="580dp"
        android:clickable="true"
        android:fontFamily="@font/karla"
        android:text="@string/not_have_account"
        android:textSize="15sp"
        app:layout_constraintDimensionRatio="14.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>